# rosettegenerator

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  holtz_patterns.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
Holtz/: __init__.py
scripts/: check_versions.py
static/css/: rosettegenerator.css
static/js/: rosettegenerator.js
templates/: rosettegenerator_tab.jinja2
