[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
dependencies = ["shapely"]

[project]
name = "RosetteGenerator"
version = "0.1.3"

description = "Rosette Generator plugin for Octoprint"
authors = [
    {name = "Justin Ahrens", email = "justin@ahrens.net"}
]
