[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
dependencies = ["shapely"]

[project]
name = "RosetteGenerator"
version = "0.1.4"

description = "Rosette Generator plugin for Octoprint"
authors = [
    {name = "Justin Ahrens", email = "justin@ahrens.net"}
]

readme = {file = "README.md", content-type = "markdown"}
dynamic = [
    "license"
]

[project.urls]
Homepage = "https://github.com/OpenSourceModular/rosettegenerator"
