[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RosetteGenerator"
version = "0.1.11"

description = "Rosette Generator plugin for Octoprint"
dependencies = ["shapely>=2.0"]
authors = [
    {name = "Justin Ahrens", email = "justin@ahrens.net"}
]

readme = {file = "README.md", content-type = "markdown"}
dynamic = [
    "license"
]

[project.urls]
Homepage = "https://github.com/OpenSourceModular/rosettegenerator"
